--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 
 html {
-  height: 100%;
   background-color: #7f5a83;
   background-image: linear-gradient(315deg, #0d324d 0%, #7f5a83 74%);
 }
@@ -10,6 +9,7 @@ html {
   float:left;
   width:100%;
   padding : 50px 0;
+  text-align: center;
 }
 
 .banner-sec {
@@ -18,9 +18,11 @@ html {
   min-height:500px; 
   border-radius: 0 10px 10px 0; 
   padding:0;
+  color: white;
+  text-align: left;
 }
 
-.container {
+.landing {
   background:#fff; 
   border-radius: 10px; 
   box-shadow:15px 20px 0px rgba(0,0,0,0.1);
@@ -71,12 +73,6 @@ html {
   margin-right:auto
 }
 
-.btn-login {
-  background: #0D324D; 
-  color:#fff; 
-  font-weight:600;
-}
-
 .banner-text {
   width:70%; 
   position: absolute; 
@@ -104,7 +100,7 @@ html {
   color:#fff;
 }
 
-form .btn{
+form .btn {
   width: 100%;
   background: #0D324D; 
   color:#fff; 
@@ -114,4 +110,37 @@ form .btn{
   font-weight: bold;
   padding: 1rem;
   transition: all 0.2s;
+}
+
+.card .btn {
+  width: 100%;
+  background: #0D324D; 
+  color:#fff; 
+  font-size: 80%;
+  border: none;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  transition: all 0.2s;
+}
+
+.form-label-group {
+  margin-bottom: 8px;
+}
+
+.card {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  height: 350px;
+  border-radius: 10px; 
+  box-shadow:15px 20px 0px rgba(0,0,0,0.1);
+}
+
+ul {
+  list-style: none;
+  padding: 0px 0px 0px 0px;
+}
+
+.hidden {
+  display:none;
 }
