--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,23 @@ html {
   background-image: linear-gradient(315deg, #0d324d 0%, #7f5a83 74%);
 }
 
+.jumbotron {
+  box-shadow:15px 20px 0px rgba(0,0,0,0.1);
+}
+
+#header {
+  background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/planet-of-solar-system-jupiter-and-ocean-with-big-waves-serkan-uzunyol.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#header h1 {
+  color: #0D324D;
+  font-weight: bolder;
+  font-size: 80px;
+  font-family: Futura;
+}
+
 .login-block {
   float:left;
   width:100%;
@@ -124,6 +141,18 @@ form .btn {
   transition: all 0.2s;
 }
 
+.modal .btn {
+  width: 100%;
+  background: #0D324D; 
+  color:#fff; 
+  font-size: 80%;
+  border: none;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  transition: all 0.2s;
+}
+
 .form-label-group {
   margin-bottom: 8px;
 }
@@ -131,7 +160,6 @@ form .btn {
 .card {
   padding-top: 15px;
   padding-bottom: 15px;
-  height: 350px;
   border-radius: 10px; 
   box-shadow:15px 20px 0px rgba(0,0,0,0.1);
 }
@@ -143,4 +171,14 @@ ul {
 
 .hidden {
   display:none;
+}
+
+iframe {
+  height: 100%;
+}
+
+#info {
+  text-align: left;
+  color: #0D324D;
+  padding: 20px 20px 20px 20px;
 }
